--- a/module_main/src/main/res/values/strings.xml
+++ b/module_main/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">module_main</string>
+
+    <string name="main_tab_view">View</string>
+    <string name="main_tab_db">DB</string>
+    <string name="main_tab_media">Media</string>
+    <string name="main_tab_webview">WebView</string>
+    <string name="main_tab_mine">Mine</string>
 </resources>
